# OpenTelemetry-Manual

./: README.md  compose.yaml  exe_001.py  metricas.json  pyproject.toml
